showcases/istio-system/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: grafana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
spec:
  rules:
  - host: istio-grafana.local
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-grafana
          servicePort: http
