showcases/istio-system/jaeger-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  namespace: istio-system
spec:
  rules:
  - host: istio-jaeger.local
    http:
      paths:
      - path: /
        backend:
          serviceName: tracing
          servicePort: http-query
