showcases/istio-system/prometheus-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: istio-system
spec:
  ports:
  - port: 9090
    name: http
  selector:
    app: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: istio-system
spec:
  rules:
  - host: istio-prometheus.local
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: http
