showcases/istio-system/servicegraph-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: servicegraph
  namespace: istio-system
spec:
  rules:
  - host: istio-servicegraph.local
    http:
      paths:
      - path: /
        backend:
          serviceName: servicegraph
          servicePort: http
